# healthCare_field_work_project_

./: .gitignore  .pre-commit-config.yaml  README.md  Workspace.code-workspace  db.sqlite3  justfile  manage.py  pyproject.toml  requirements.txt
.venv-1/: pyvenv.cfg
.venv-1/Scripts/: activate  activate.bat
appointments/: admin.py  models.py  urls.py  views.py
appointments/migrations/: 0001_initial.py
blog/: admin.py  models.py  views.py
blog/migrations/: 0001_initial.py
doctors/: admin.py  models.py  urls.py  views.py
doctors/migrations/: 0001_initial.py
hospital/: settings.py  urls.py  views.py
hospital/templates/appointments/: book.html  my_appointments.html
hospital/templates/blog/: blog_detail.html  blog_list.html
hospital/templates/doctors/: doctor_detail.html  doctor_list.html
hospital/templates/hospital/: about.html  base.html  contact.html  home.html  services.html
hospital/templates/patients/: dashboard.html  login.html  profile.html  register.html
hospital/templates/reports/: my_reports.html
patients/: admin.py  models.py  settings.py  urls.py  views.py
patients/migrations/: 0001_initial.py
reports/: admin.py  models.py  urls.py  views.py
reports/migrations/: 0001_initial.py
