[project]
name = "healthcare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=4.2,<7.0",
    "djangorestframework>=3.14.0",
    "pillow>=10.0.0",
    "pre-commit>=4.5.1",
]

target-version = "py313"

[tool.black]
target-version = ["py313"]

[tool.isort]
profile = "black"

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.

[lint.select]
select = ["E", "F"]

[lint.ignore]
ignore = ["E501", "E741"]
